# fastapi-improved-structure

./: .gitignore  note.txt
backend/: pyproject.toml  requirements.txt  run.py  run_server.py  verify_installs.py
backend/migrations/: env.py
backend/migrations/versions/: 69430fc68817_user_update.py  bd1450cc24cd_user_is_active.py  d35834005f76_user_role.py  de7a3348e4bb_user_model.py
backend/source/: __init__.py  config.py  dependencies.py  exceptions.py  main.py  manager.py  models.py  utils.py
backend/source/api/: deps.py  endpoints.py
backend/source/api/routers/: auth.py  roles.py  user.py  user_roles.py  users.py
backend/source/apps/accounts/: api.py  views.py
backend/source/constants/: role.py
backend/source/crud/: base.py  role.py  user.py  user_role.py
backend/source/custom/: __init__.py
backend/source/schemas/: role.py  token.py  user.py  user_role.py
backend/source/services/: authentication.py  database.py  exceptions.py  manager.py  rate.py  redis.py  roles.py  security.py
backend/source/views/: user.py
backend/templates/: _base.html  test.html
backend/templates/accounts/: login.html  register.html
backend/tests/: conftest.py  note.txt  some_stuff.py  test_database.py
backend/tests/integration/: conftest.py  test_basic.py  test_create_user.py
backend/tests/v1/: conftest.py  test_user_views.py
backend/tests/v2/: conftest.py  test_database_user.py  test_main_app.py
backend/tests/v3/: conftest.py  test_demo.py
backend/tests/v4/: conftest.py  test_auth_views.py  test_redis_routes.py  test_user_views.py
